objects/Energy_Quote__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Energy Quotes</relationshipLabel>
        <relationshipName>Energy_Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <formula>IF(
    NOT(
            ISBLANK(Account_Name__r.AccountNumber)
        ),  
            TEXT(VALUE(RIGHT(Account_Name__r.AccountNumber, 6))
        )
            , End_Customer__r.CUST__c
    )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Customer Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_Total_Price__c</fullName>
        <description>for quote reporting</description>
        <label>Actual Total Price</label>
        <summarizedField>Energy_Quote_Line_Item__c.TotalPrice__c</summarizedField>
        <summaryForeignKey>Energy_Quote_Line_Item__c.Energy_Quote_Name__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Approval_Criteria__c</fullName>
        <formula>IF((Quote_Record_No__c != RSM_Price_Roll_Up__c), &quot;Required Approval&quot;, &quot;Required Approval&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approval Criteria</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Won</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Lost</fullName>
                </value>
                <value>
                    <fullName>Superceded</fullName>
                </value>
                <value>
                    <fullName>In QAD</fullName>
                </value>
                <value>
                    <fullName>Presented</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                    <isActive>false</isActive>
                    <label>Approved</label>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                    <isActive>false</isActive>
                    <label>Rejected</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Auto_Quote_Number__c</fullName>
        <description>Auto generate quote number</description>
        <displayFormat>Q{0000}</displayFormat>
        <label>Auto Quote Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>BillingAddress__c</fullName>
        <label>Bill To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingName__c</fullName>
        <label>Bill To Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Competitor__c</fullName>
        <label>Competitor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>3M</fullName>
                </value>
                <value>
                    <fullName>ABB</fullName>
                </value>
                <value>
                    <fullName>Basler</fullName>
                </value>
                <value>
                    <fullName>Beede</fullName>
                </value>
                <value>
                    <fullName>Blackburn</fullName>
                </value>
                <value>
                    <fullName>Brady</fullName>
                </value>
                <value>
                    <fullName>Brugg</fullName>
                </value>
                <value>
                    <fullName>Burndy</fullName>
                </value>
                <value>
                    <fullName>Canadian Shunts</fullName>
                </value>
                <value>
                    <fullName>Canusa</fullName>
                </value>
                <value>
                    <fullName>Central Maloney</fullName>
                </value>
                <value>
                    <fullName>CMC</fullName>
                </value>
                <value>
                    <fullName>Cooper</fullName>
                </value>
                <value>
                    <fullName>Crompton Greaves</fullName>
                </value>
                <value>
                    <fullName>Dark to Light</fullName>
                </value>
                <value>
                    <fullName>Deif</fullName>
                </value>
                <value>
                    <fullName>DMX</fullName>
                </value>
                <value>
                    <fullName>ECO Electrical</fullName>
                </value>
                <value>
                    <fullName>EHV</fullName>
                </value>
                <value>
                    <fullName>Elastimold</fullName>
                </value>
                <value>
                    <fullName>Electic Metering</fullName>
                </value>
                <value>
                    <fullName>Electro-Industries</fullName>
                </value>
                <value>
                    <fullName>Emelec</fullName>
                </value>
                <value>
                    <fullName>Empro</fullName>
                </value>
                <value>
                    <fullName>Erico</fullName>
                </value>
                <value>
                    <fullName>G&amp;W</fullName>
                </value>
                <value>
                    <fullName>Green jacket</fullName>
                </value>
                <value>
                    <fullName>Homac</fullName>
                </value>
                <value>
                    <fullName>Hoyt</fullName>
                </value>
                <value>
                    <fullName>Hubbell</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Energy Quotes</relationshipLabel>
        <relationshipName>Energy_Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Finish_Date__c</fullName>
        <description>Contract finish date of the initial duration period</description>
        <inlineHelpText>Contract finish date of the initial duration period</inlineHelpText>
        <label>Contract Finish Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Energy Quotes</relationshipLabel>
        <relationshipName>Energy_Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_start_date__c</fullName>
        <description>For EMEA region</description>
        <inlineHelpText>Please enter the date the new Contract will start.</inlineHelpText>
        <label>Contract start date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Create_By_Email__c</fullName>
        <formula>CreatedBy.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Create By Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency1__c</fullName>
        <label>Currency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CAD</fullName>
                </value>
                <value>
                    <fullName>USD</fullName>
                </value>
                <value>
                    <fullName>MXN</fullName>
                </value>
                <value>
                    <fullName>COP</fullName>
                </value>
                <value>
                    <fullName>PEN</fullName>
                </value>
                <value>
                    <fullName>CLP</fullName>
                </value>
                <value>
                    <fullName>ARS</fullName>
                </value>
                <value>
                    <fullName>BRL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <formula>IF(ISPICKVAL(TE_Sales_Office__c, &apos;UNITED STATES&apos;) ,(&apos;USD&apos;),
IF(ISPICKVAL(TE_Sales_Office__c, &apos;MEXICO&apos;) ,(&apos;MXN&apos;),
IF(ISPICKVAL(TE_Sales_Office__c, &apos;COLOMBIA&apos;) ,(&apos;COP&apos;),

IF(ISPICKVAL(TE_Sales_Office__c, &apos;PERU&apos;) ,(&apos;PEN&apos;),

IF(ISPICKVAL(TE_Sales_Office__c, &apos;CHILE&apos;) ,(&apos;CLP&apos;),

IF(ISPICKVAL(TE_Sales_Office__c, &apos;ARGENTINA&apos;) ,(&apos;ARS&apos;),

IF(ISPICKVAL(TE_Sales_Office__c, &apos;BRAZIL&apos;) ,(&apos;BRL&apos;),
IF(ISPICKVAL(TE_Sales_Office__c, &apos;CANADA&apos;) ,(&apos;CAD&apos;),

null
)
)))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Custom Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Energy Quotes (Custom Opportunity)</relationshipLabel>
        <relationshipName>Energy_Quotes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Ref_Number__c</fullName>
        <label>Customer Ref Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_prices_valid__c</fullName>
        <label>Valid For</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>30 Days</fullName>
                </value>
                <value>
                    <fullName>60 Days</fullName>
                </value>
                <value>
                    <fullName>90 Days</fullName>
                </value>
                <value>
                    <fullName>120 Days</fullName>
                </value>
                <value>
                    <fullName>180 Days</fullName>
                </value>
                <value>
                    <fullName>1 year</fullName>
                </value>
                <value>
                    <fullName>2 years</fullName>
                </value>
                <value>
                    <fullName>3 years</fullName>
                </value>
                <value>
                    <fullName>4 years</fullName>
                </value>
                <value>
                    <fullName>5 years</fullName>
                </value>
                <value>
                    <fullName>12/31/17</fullName>
                </value>
                <value>
                    <fullName>6 months</fullName>
                </value>
                <value>
                    <fullName>12/31/16</fullName>
                </value>
                <value>
                    <fullName>12/31/18</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <label>Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>End_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>End Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Energy Quotes (End Customer)</relationshipLabel>
        <relationshipName>Energy_Quotes2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Energy_Record_Id__c</fullName>
        <externalId>true</externalId>
        <label>Energy Record Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Exclude_Customer_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude Customer Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Validity Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiration_Email_Sent__c</fullName>
        <label>Expiration Email Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiry_Date__c</fullName>
        <formula>if(ISPICKVAL( Days_prices_valid__c ,&apos;30 Days&apos;), (Valid_From__c +30), 
if(ISPICKVAL( Days_prices_valid__c ,&apos;60 Days&apos;), (Valid_From__c +60), 
if(ISPICKVAL( Days_prices_valid__c ,&apos;90 Days&apos;), (Valid_From__c + 90), 
if(ISPICKVAL( Days_prices_valid__c ,&apos;120 Days&apos;), (Valid_From__c + 120 ), 
if(ISPICKVAL( Days_prices_valid__c ,&apos;180 Days&apos;), (Valid_From__c + 180 ), 
if(ISPICKVAL( Days_prices_valid__c ,&apos;1 year&apos;), (Valid_From__c + 365), 
if(ISPICKVAL( Days_prices_valid__c ,&apos;2 years&apos;), (Valid_From__c + 730),
if(ISPICKVAL( Days_prices_valid__c ,&apos;3 years&apos;), (Valid_From__c + 1095),
if(ISPICKVAL( Days_prices_valid__c  ,&apos;4 years&apos;), (Valid_From__c + 1460),
if(ISPICKVAL( Days_prices_valid__c ,&apos;5 years&apos;), (Valid_From__c + 1825),null))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>From_ComPriceRequest__c</fullName>
        <defaultValue>false</defaultValue>
        <label>From ComPriceRequest</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GrandTotal__c</fullName>
        <label>Grand Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Header_Level_Comments__c</fullName>
        <label>Header Level Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsSyncing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Syncing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>Portuguese</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LegacyQuoteNumber__c</fullName>
        <label>Legacy Quote Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LineItemCount__c</fullName>
        <label>Line Items</label>
        <summaryForeignKey>Energy_Quote_Line_Item__c.Energy_Quote_Name__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Market_Segment__c</fullName>
        <label>Market Segment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aviation</fullName>
                </value>
                <value>
                    <fullName>Chemical Processing</fullName>
                </value>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Crompton</fullName>
                </value>
                <value>
                    <fullName>Data Centers</fullName>
                </value>
                <value>
                    <fullName>Distribution</fullName>
                </value>
                <value>
                    <fullName>Hydro</fullName>
                </value>
                <value>
                    <fullName>Mining</fullName>
                </value>
                <value>
                    <fullName>Nuclear</fullName>
                </value>
                <value>
                    <fullName>OEM</fullName>
                </value>
                <value>
                    <fullName>Oil &amp; Gas</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Ports &amp; Waterways</fullName>
                </value>
                <value>
                    <fullName>Pulp, Paper &amp; Wood</fullName>
                </value>
                <value>
                    <fullName>Smart Grid</fullName>
                </value>
                <value>
                    <fullName>Solar</fullName>
                </value>
                <value>
                    <fullName>Substation</fullName>
                </value>
                <value>
                    <fullName>Transit/Rail</fullName>
                </value>
                <value>
                    <fullName>Transmission</fullName>
                </value>
                <value>
                    <fullName>Wind</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Market_Type__c</fullName>
        <label>Market Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Power Generation Wind</fullName>
                </value>
                <value>
                    <fullName>Power Generation Nuclear</fullName>
                </value>
                <value>
                    <fullName>Power Generation Solar</fullName>
                </value>
                <value>
                    <fullName>Power Generation Others</fullName>
                </value>
                <value>
                    <fullName>Power Transmission Overhead</fullName>
                </value>
                <value>
                    <fullName>Power Transmission Underground</fullName>
                </value>
                <value>
                    <fullName>Power Transmission Sub-station</fullName>
                </value>
                <value>
                    <fullName>Power Distribution LV Overhead</fullName>
                </value>
                <value>
                    <fullName>Power Distribution LV Underground</fullName>
                </value>
                <value>
                    <fullName>Power Distribution MV Overhead</fullName>
                </value>
                <value>
                    <fullName>Power Distribution MV Underground</fullName>
                </value>
                <value>
                    <fullName>Power Distribution Sub-station</fullName>
                </value>
                <value>
                    <fullName>Power Distribution Industrial</fullName>
                </value>
                <value>
                    <fullName>Industry Railway</fullName>
                </value>
                <value>
                    <fullName>Industry Mining</fullName>
                </value>
                <value>
                    <fullName>Industry OGPC</fullName>
                </value>
                <value>
                    <fullName>Industry Building/Construction</fullName>
                </value>
                <value>
                    <fullName>Industry Others</fullName>
                </value>
                <value>
                    <fullName>Crompton Metering</fullName>
                </value>
                <value>
                    <fullName>Distribution &amp; Automation</fullName>
                </value>
                <value>
                    <fullName>Industry Steel</fullName>
                </value>
                <value>
                    <fullName>Industry Shipbuilding</fullName>
                </value>
                <value>
                    <fullName>Partnership</fullName>
                </value>
                <value>
                    <fullName>Industry Ship / Rig Building</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Industrial</fullName>
                </value>
                <value>
                    <fullName>Utility</fullName>
                </value>
                <value>
                    <fullName>Nuclear</fullName>
                </value>
                <value>
                    <fullName>OEM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <formula>CASE(MONTH(DATEVALUE(CreatedDate)),
1, &quot;1-Jan&quot;, 
2, &quot;2-Feb&quot;, 
3, &quot;3-Mar&quot;, 
4, &quot;4-Apr&quot;, 
5, &quot;5-May&quot;, 
6, &quot;6-Jun&quot;, 
7, &quot;7-Jul&quot;, 
8, &quot;8-Aug&quot;, 
9, &quot;9-Sep&quot;, 
10,&quot;10-Oct&quot;, 
11, &quot;11-Nov&quot;, 
12, &quot;12-Dec&quot;, 
&quot;None&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <label>Opportunity Name</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Energy Quotes</relationshipLabel>
        <relationshipName>Energy_Quotes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Override_Incoterms_Code__c</fullName>
        <label>Override Incoterms Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EXW</fullName>
                </value>
                <value>
                    <fullName>FCA</fullName>
                </value>
                <value>
                    <fullName>CPT</fullName>
                </value>
                <value>
                    <fullName>CIP</fullName>
                </value>
                <value>
                    <fullName>DAT</fullName>
                </value>
                <value>
                    <fullName>DAP</fullName>
                </value>
                <value>
                    <fullName>DDP</fullName>
                </value>
                <value>
                    <fullName>FAS</fullName>
                </value>
                <value>
                    <fullName>FOB</fullName>
                </value>
                <value>
                    <fullName>CFR</fullName>
                </value>
                <value>
                    <fullName>CIF</fullName>
                </value>
                <value>
                    <fullName>DAS</fullName>
                </value>
                <value>
                    <fullName>DEQ</fullName>
                </value>
                <value>
                    <fullName>DDU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Override_Incoterms_Details__c</fullName>
        <label>Override Incoterms Details</label>
        <length>28</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Override_Payment_Terms_Code__c</fullName>
        <label>Override Payment Terms Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Owner Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PriceList_RollUp__c</fullName>
        <label>PriceList RollUp</label>
        <summarizedField>Energy_Quote_Line_Item__c.Product_List_Price__c</summarizedField>
        <summaryForeignKey>Energy_Quote_Line_Item__c.Energy_Quote_Name__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Price_List_Roll_Up__c</fullName>
        <description>AMR Auto Approval roll up</description>
        <label>Price List (Roll Up)</label>
        <summarizedField>Energy_Quote_Line_Item__c.UnitPrice__c</summarizedField>
        <summaryForeignKey>Energy_Quote_Line_Item__c.Energy_Quote_Name__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Price_increase_or_Price_erosion_Number__c</fullName>
        <formula>Price_increase_or_Price_erosion__c *100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Price increase or Price erosion - Number</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price_increase_or_Price_erosion__c</fullName>
        <label>Price increase or Price erosion (%)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pricing_Analyst__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pricing Analyst</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Energy_Quotes2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Print_Date__c</fullName>
        <formula>TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Print Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RSM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Energy_Quotes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QuoteLineItem_Count__c</fullName>
        <label>QuoteLineItem Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QuoteNumber__c</fullName>
        <label>QuoteNumber</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Number__c</fullName>
        <formula>if (isBlank(LegacyQuoteNumber__c),  
    if(isBlank(SAP_Quote_Number__c), 
        Auto_Quote_Number__c + &apos;-&apos; +  text(RevisionNum__c), 
        SAP_Quote_Number__c + &apos;-&apos; +  text(RevisionNum__c) ), 
    if (isBlank(RevisionNum__c), 
        if (Contains(LegacyQuoteNumber__c, &apos;RSQ&apos;), MID(LegacyQuoteNumber__c, 3, LEN(LegacyQuoteNumber__c)) , LegacyQuoteNumber__c), 
        if (Contains(LegacyQuoteNumber__c, &apos;RSQ&apos;), MID(LegacyQuoteNumber__c, 3, LEN(LegacyQuoteNumber__c)) , LegacyQuoteNumber__c) + &apos;-&apos; +  text(RevisionNum__c) ))</formula>
        <label>Quote Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Price_Roll_Up__c</fullName>
        <description>AMR Auto Approval for Quote</description>
        <label>Quote Price (Roll Up)</label>
        <summarizedField>Energy_Quote_Line_Item__c.Sold_Price__c</summarizedField>
        <summaryForeignKey>Energy_Quote_Line_Item__c.Energy_Quote_Name__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Quote_Record_No__c</fullName>
        <label>Quote Record No</label>
        <summaryForeignKey>Energy_Quote_Line_Item__c.Energy_Quote_Name__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Quote_Type__c</fullName>
        <label>Quote Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Meet Competitor Price</fullName>
                </value>
                <value>
                    <fullName>Blanket/Tender</fullName>
                </value>
                <value>
                    <fullName>One Time Tender</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quote_number_Without_revision_number__c</fullName>
        <formula>if (isBlank(LegacyQuoteNumber__c),  
    if(isBlank(SAP_Quote_Number__c), 
        Auto_Quote_Number__c , 
        SAP_Quote_Number__c ), 
    LegacyQuoteNumber__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote number Without revision number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSM_Price_Roll_Up__c</fullName>
        <label>RSM Price Roll Up</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reason_of_Win__c</fullName>
        <label>Reason Won</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Reason_Won_Picklist_Value</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>Opportunity_Name__r.Owner_Region__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RevisionNum__c</fullName>
        <label>Revision</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SAP_Creation_Status__c</fullName>
        <label>SAP Creation Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>Awaiting Creation in SAP</fullName>
                </value>
                <value>
                    <fullName>Created In SAP</fullName>
                </value>
                <value>
                    <fullName>Failed to Create in SAP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SAP_Message__c</fullName>
        <description>Message returned from SAP</description>
        <inlineHelpText>Message returned for EMEA</inlineHelpText>
        <label>SAP Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Quote_Number__c</fullName>
        <label>SAP Quote Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Person_Email__c</fullName>
        <formula>Account_Name__r.Owner.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Person Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Selected_Email_Template__c</fullName>
        <label>Selected Email Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_to_QAD__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send to QAD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ShippingAddress__c</fullName>
        <label>Ship To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippingName__c</fullName>
        <label>Ship To Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_to_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote Company Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Energy Quotes (Quote Company Name)</relationshipLabel>
        <relationshipName>Energy_Quotes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Standard_Margin_Number__c</fullName>
        <formula>Standard_Margin__c *100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Standard Margin (%) - Number</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Standard_Margin__c</fullName>
        <label>Standard Margin (%)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Subtotal__c</fullName>
        <label>Subtotal</label>
        <summarizedField>Energy_Quote_Line_Item__c.Subtotal__c</summarizedField>
        <summaryForeignKey>Energy_Quote_Line_Item__c.Energy_Quote_Name__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
</CustomObject>